enhanced author mode, added grade interpretations

--- a/_includes/functions/print-js-teachermode.html
+++ b/_includes/functions/print-js-teachermode.html
@@ -27,8 +27,8 @@
     }
     function resetAll() {
         console.log( "resertAll" );
-        if ( confirm('Wirklich ALLES löschen?' ) ) {
-            if ( confirm('Echt jetzt?' ) ) {
+        if ( confirm('Really delete all data?' ) ) {
+            if ( confirm('REALLY?' ) ) {
                 localStorage.clear();
             }
         };
