--- a/_layouts/functionalRequirement.html
+++ b/_layouts/functionalRequirement.html
@@ -9,9 +9,7 @@ layout: default
 {% include /functions/print-page-navigation.html myArtefact=page %}
 
 <dl>
-    <dt>Autor(en)</dt>
-    {% include /functions/resolve-names.html myResponsible=page.responsible %}
-    <dd>{{ responsibleString }}</dd>
+    {% include /functions/print-authors.html page=page %}
 
     <dt>Zahlt ein auf Ziel(e)</dt>
     {% if page.goals %}
