--- a/_layouts/systemContextElement.html
+++ b/_layouts/systemContextElement.html
@@ -11,9 +11,7 @@ layout: default
 {% include /functions/print-page-navigation.html myArtefact=page %}
 
 <dl>
-    <dt>Autor(en)</dt>
-    {% include /functions/resolve-names.html myResponsible=page.responsible %}
-    <dd>{{ responsibleString }}</dd>
+    {% include /functions/print-authors.html page=page %}
 
     <dt>Quellen</dt>
     {% for source in page.source %}
