--- a/_layouts/useCase.html
+++ b/_layouts/useCase.html
@@ -10,9 +10,7 @@ layout: default
 {% include /functions/print-page-navigation.html myArtefact=page %}
 
 <dl>
-    <dt>Autor(en)</dt>
-    {% include /functions/resolve-names.html myResponsible=page.responsible %}
-    <dd>{{ responsibleString }}</dd>
+    {% include /functions/print-authors.html page=page %}
 
     {% assign myAcronym = page.acronym %}
     {% assign relatedUseCaseDiagrams = site.useCaseDiagrams |
