--- a/_layouts/persona.html
+++ b/_layouts/persona.html
@@ -16,10 +16,10 @@ layout: default
 
 
     <dt>Alter</dt>
-    <dt>{{ page.age }}</dt>
+    <dd>{{ page.age }}</dd>
 
     <dt>Szenarien für diese Persona</dt>
-    <dt>tbd.</dt>
+    <dd>tbd.</dd>
 
 
     {% include /functions/print-history.html myArtefact=page %}
